Finalise the styling of header and first section Fixed some alignment issues and finalised the css styling of the header and first section

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .header {
@@ -16,9 +17,14 @@ body {
     justify-content: space-between;
 }
 
+#logo {
+    font-size: 24px;
+}
+
 #hero {
     font-size: 48px;
     font-weight:bolder;
+    margin: 0;
 }
 
 ul {
@@ -37,7 +43,6 @@ a {
 
 .header-section-two {
     display: flex;
-    justify-content: center;
     gap: 50px;
     background-color: #1F2937;
     color: white;
@@ -47,7 +52,7 @@ a {
 .header-section-two-text {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: right;
     flex: 1;
 }
 
@@ -60,5 +65,15 @@ a {
 }
 
 .header-section-two-text button{
-    width: 80px;
+    height: 30px;
+    width: 100px;
+    background-color: #3882F6;
+    border: none;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.header-section-two-text p {
+    margin-top: 0;
 }
